# ETL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ae_manifest.json  clinical_trials_2025.json  clinical_trials_2025_summary.md  clinical_trials_2025_table.csv  demo_production_features.py  docker-compose.yml  extract_trials_2025.py  file_server.py  langgraph.json  profile_all_source_data.py  pyproject.toml  requirements-docker.txt  requirements.txt  run_sdtm_deepagent.py  run_sdtm_langgraph.py  setup_gmail_oauth.py  start_langgraph.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
.sessions/: sessions.json
etl_neo4j/: neo4j_loader.py
generated_documents/: AEVENT_DTA_Issues_List_20260130_142508.csv  AE_Domain_Transformation_20260202_110712.txt  AE_SDTM_Mapping_Specification_MAXIS-08_20260131_234607.xlsx  Adverse_Event_Data_Quality_Assessment_Report_-_MAXIS-08_20260130_152759.docx  Adverse_Event_Data_Quality_Report_-_MAXIS-08_20260130_152051.docx  Business_Rules_Validation_Report_20260129_174558.xlsx  ClinicalTrials_Dashboard_20260206_021700.xlsx  DM_Domain_Transformation_20260202_110712.txt  DTA_Compliance_and_Data_Quality_Audit_Report_-_MAXIS-08_Demographics_20260130_170601.docx  DTA_REMEDIATION_TRACKER.csv  DTA_VALIDATION_COMPREHENSIVE_REPORT.md  DTA_VALIDATION_EXECUTIVE_SUMMARY.md  DTA_VALIDATION_ISSUES_DETAILED.csv  DTA_VALIDATION_PACKAGE_README.md  DTA_VALIDATION_QUICK_REFERENCE.md  DTA_Validation_Issues_Adverse_Events_20260130_145809.csv  INDEX_DTA_VALIDATION.md  MAXIS-08_AE_Anomaly_Report_20260202_083142.xlsx  MAXIS-08_EDC_Data_Catalog_20260202_122537.xlsx  MAXIS-08_Source_Data_Profiling_Report_-_Executive_Summary_20260202_134242.docx  Oncology_Clinical_Trials_2025_-_Chart_Data_20260205_111512.xlsx  Oncology_Clinical_Trials_Analysis_-_2025_20260205_110415.pptx  Oncology_Clinical_Trials_Analysis_-_2025_20260205_111155.pptx  SDTM_AE_Transformation_Program_20260202_110325.txt  SDTM_DM_Transformation_Program_20260202_110325.txt  SDTM_Domains_Available_in_S3_Bucket_20260128_163743.docx  SDTM_Domains_in_S3_Bucket_-_MAXIS-08_Study_20260128_170202.pptx  SDTM_Domains_in_S3_Bucket_20260128_173415.xlsx  SDTM_SAS_Programs_Complete_Documentation_20260202_110712.md  SDTM_SAS_Programs_Documentation_20260202_110325.md  SDTM_SAS_Transformation_Programs_-_DM_and_AE_Domains_20260203_162940.docx  SDTM_VS_Domain_Transformation_20260129_173411.txt  Test_Log_20260128_170049.txt  Test_Presentation_20260128_170049.pptx  VS_Domain_Output_and_QC_20260129_174325.xlsx  VS_SDTM_Mapping_Specification_ISO8601_20260204_131412.xlsx  VS_Transformation_SAS_Log_20260129_174254.txt  sdtm_ae_transformation_20260203_163127.txt  sdtm_dm_transformation_20260203_163021.txt
sdtm_chat_output/: AE_Mapping_Specification.md  AE_TRANSFORMATION_COMPLETE.md  AE_VALIDATION_REPORT.md  QUICK_START_GUIDE.md  README_AE_TRANSFORMATION.md  RUN_TRANSFORMATION.sh  TRANSFORMATION_SUMMARY_REPORT.md  VS_Mapping_Specification.md  ae.csv  ae_direct_transform.py  ae_mapping_specification.json  ae_transform_v2.py  ae_validation_script.py  (+4 more)
(+417 files in other folders)
