[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdtm-pipeline"
version = "1.0.0"
description = "SDTM Clinical Trial Data Transformation Pipeline using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SDTM Pipeline Team"}
]
keywords = ["sdtm", "cdisc", "clinical-trial", "langgraph", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langsmith>=0.2.0",
    "deepagents>=0.1.0",
    "anthropic>=0.43.0",
    "pandas>=2.0.0",
    "neo4j>=5.0.0",
    "neomodel>=5.4.0",
    "boto3>=1.34.0",
    "s3fs>=2024.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "aioboto3>=13.0.0",
    "polars>=1.0.0",
    "pyarrow>=17.0.0",
    "orjson>=3.10.0",
    "lxml>=5.0.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.2",
    "tavily-python>=0.3.0",
    "rank-bm25>=0.2.2",
    "nltk>=3.8",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "quickchart-io>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdtm_pipeline*", "etl_neo4j*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
